# android-pin-brute-force

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: build.yml
scripts/: build-android-arm.sh  build-android-arm64.sh  build-android-i686.sh  build-android-x86_64.sh  build-linux-x64.sh  create-new-gh-release.sh
src/: hid_ops.rs  key-map.rs  key_map.rs  main.rs  timeout.rs
src/assets/: 4_digit_pins_optimised.txt
src/build-scripts/: build-android-x64.sh  build-linux-x64.sh
src/common/: app.rs  cli.rs  defaults.rs  mod.rs
src/hid/: key_map.rs  mod.rs  ops.rs
src/pin_lists/: four_digits.rs  mod.rs
