[package]
name = "apbf"
authors = ["PurplProto"]
version = "0.2.0"
edition = "2021"
description = "A tool to brute force the PIN of an Android device."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
crossterm = "0.27.0"
ctrlc = { version = "3.4.2", features = ["termination"] }
log = "0.4.20"
regex = "1.10.3"
simplelog = "0.12.1"
